--- a/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
+++ b/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
@@ -237,6 +237,9 @@
     "You are receiving this email because we received a password reset request for your account.": "Ha recibido este mensaje porque se solicitó un restablecimiento de contraseña para su cuenta.",
     "You're logged in!": "¡Usted está conectado!",
     "Your email address is unverified.": "Su dirección de correo electrónico no está verificada.",
+
+    "Posts": "Publicaciones",
+    "Create publication": "Crear publicación",
     "Create a publication": "Crea una publicación",
     "Title of the publication": "Título de la publicación",
     "Write here the title of the publication": "Escribe aquí el título de la publicación",
