feat(lang, views): stylize the posts appearance

--- a/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
+++ b/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
@@ -253,5 +253,7 @@
     "Public": "Público",
     "Private": "Privado",
     "Publish": "Publicar",
-    "Published": "Publicado"
+    "Published": "Publicado",
+    "Posted on": "Publicado en",
+    "by": "por"
 }
