style(PostController, lang, views): fix css style

--- a/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
+++ b/no_entregables/T06P03_laravel_ejemplo_examen/ejemplo_examen/lang/es.json
@@ -255,5 +255,6 @@
     "Publish": "Publicar",
     "Published": "Publicado",
     "Posted on": "Publicado en",
-    "by": "por"
+    "by": "por",
+    "Edit a publication": "Editar una publicación"
 }
